[tool.poetry]
name = "proj-420-d10"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "proj_420_d10"}]

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.2"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
